Update Base Url SwaggerUI
